--- a/thesis-app/src/app/customer/components/stylist-profile/stylist-profile.component.html
+++ b/thesis-app/src/app/customer/components/stylist-profile/stylist-profile.component.html
@@ -92,20 +92,21 @@
         </div>
       </div>
 
-      <div class="serviceContainer" *ngIf="!!isStylesFetched">
+      <div class="serviceContainer2" *ngIf="!!isStylesFetched">
         <h4>Services</h4>
         <div class="wrapContainer">
           <div *ngFor="let style of styles">
-            {{style.servicename}}
-            <input type="checkbox" id="styleGroup" [name]="style.id" value="style.id" ngModel />
+            <h6><input type="checkbox" id="styleGroup" [name]="style.id" value="style.id" ngModel />{{style.servicename}}</h6>
           </div>
         </div>
       </div>
 
-      <div class="">
-        Additional Details
+      <div class="lastContainer">
+        <h4>Additional Details</h4>
         <textarea name="detail" ngModel></textarea>
-        <button type="submit">Book</button>
+        <div class="ultimoContainer">
+          <button type="submit">Book</button>
+        </div>
       </div>
     </form>
     </div>
