Commit before merge

--- a/thesis-app/src/app/customer/components/stylist-profile/stylist-profile.component.html
+++ b/thesis-app/src/app/customer/components/stylist-profile/stylist-profile.component.html
@@ -12,7 +12,7 @@
   <div class="profileContainer">
     <div class="userInfoContainer">
       <div class="imageContainer">
-        <!-- <img class="profileImage" [src]=stylistProfile.image_url /> -->
+        <img class="profileImage" [src]=stylistProfile.image_url />
         <h3>{{stylistProfile.name}}</h3>
       </div>
       <div class="userInfo">
