--- a/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.css
+++ b/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.css
@@ -9,7 +9,7 @@
 
 .header {
   height: 25%;
-  padding-top: 10em;
+  padding-top: 8em;
   margin-left: 2em;
   margin-right: 2em;
   width: 83%;
@@ -18,10 +18,11 @@
 
 .formWrapper {
   background: rgba(255,255,255,0.4);
+  border: 2px solid red;
   height: 65%;
   border-radius: 5px;
   width: 83%;
-  margin-top: 3em;
+  margin-top: 1em;
   padding-left: 3em;
   padding-right: 3em;
   margin-left: 5em;
@@ -84,11 +85,23 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  height: 40%;
+  border: 2px solid red;
 }
 
 .serviceTitle {
   width: 100%;
   height: 1%;
+}
+
+.styleContainer {
+  border: 2px solid red;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  overflow: scroll;
+  width: 100%;
+  height: 100%;
 }
 
 .style {
