--- a/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.html
+++ b/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.html
@@ -56,13 +56,15 @@
         <div class="serviceTitle">
           <h5>Types of Services</h5>
         </div>
-        <div class="style" *ngFor="let service of stylesPlaceHolder">
-            <p><input
-              type="checkbox"
-              id="service"
-              ngModel
-              [name]="service.id"
-            >{{ service.servicename }}</p>
+        <div class="styleContainer">
+          <div class="style" *ngFor="let service of stylesPlaceHolder">
+              <p><input
+                type="checkbox"
+                id="service"
+                ngModel
+                [name]="service.id"
+              >{{ service.servicename }}</p>
+          </div>
         </div>
       </div>
       <div class="buttonContainer">
