Adjust the sizing on the signup stylist component

--- a/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.css
+++ b/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.css
@@ -82,26 +82,22 @@
 .spanContainer {
   width: 95%;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
   height: 40%;
-  border: 2px solid red;
 }
 
 .serviceTitle {
   width: 100%;
-  height: 1%;
+  height: 20%;
 }
 
 .styleContainer {
-  border: 2px solid red;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   overflow: scroll;
   width: 100%;
-  height: 100%;
+  height: 75%;
 }
 
 .style {
