--- a/thesis-app/src/app/customer/components/booking/booking.component.html
+++ b/thesis-app/src/app/customer/components/booking/booking.component.html
@@ -9,16 +9,12 @@
 <div class="wrapper">
   <div class="profileContainer">
     <div class="photoContainer">
-      <img src="image_url"/>
+      <img [src]="image_url"/>
     </div>
     <div class="infoContainer">
       <h6>{{name}}</h6>
-      <h6>Date: {{time}}</h6>
-      <h6>Contact: {{phoneNumber}}</h6>
+      <h6 class="glyphicon glyphicon-time">{{time}}</h6>
+      <h6 class="glyphicon glyphicon-earphone">{{phoneNumber}}</h6>
     </div>
-  </div>
-  <div class="buttonContainer">
-    <button>Accept</button>
-    <button>Decline</button>
   </div>
 </div>
