Add black text and white background to the customer profile component

--- a/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.css
+++ b/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.css
@@ -113,6 +113,15 @@
   background-color: rgba(0,0,0,0.2);
 }
 
+.modalWrapper input {
+  background-color: white;
+  color: black;
+}
+
+.modalWrapper textarea {
+  color: black;
+}
+
 /* Modal Content/Box */
 .miniWrapper {
   background-color: #6F6F6F;
