Adjust the spacing on the customer home component

--- a/thesis-app/src/app/customer/components/stylist-profile/stylist.profile.component.css
+++ b/thesis-app/src/app/customer/components/stylist-profile/stylist.profile.component.css
@@ -96,10 +96,15 @@
   flex: 1 1 25%;
 }
 
+.modalWrapper textarea {
+  background-color: white;
+  color: black;
+}
 
-
-
-
+.modalWrapper input {
+  background-color: white;
+  color: black;
+}
 
 .paragraph {
   overflow: scroll;
