--- a/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
+++ b/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
@@ -18,7 +18,7 @@
 
       <div class="userInfo">
         <h5><span class="glyphicon glyphicon-question-sign"></span> {{ profile.billingaddress }}</h5>
-        <h5 *ngIf="profile.type===0">Personal Website: {{profile.site_url}}</h5>
+        <h5 *ngIf="profile.type===0"><span class="glyphicon glyphicon-question-sign"></span> Personal Website: {{profile.site_url}}</h5>
         <h5><span class="glyphicon glyphicon-question-sign"></span> {{ profile.phonenumber }}</h5>
       </div>
     </div>
