--- a/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.css
+++ b/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.css
@@ -31,6 +31,7 @@
   width: 24%;
   margin: .5em;
   height: 2.5em;
+  border: 1px solid #F9B71A;
 }
 
 .profileContainer {
@@ -205,4 +206,8 @@
   margin-top: 1em;
   border-radius: 35px;
   text-align: center;
+}
+
+.btnContainer > * {
+  border: 1px solid #F9B71A;
 }
