--- a/thesis-app/src/app/customer/components/stylist-profile/stylist.profile.component.css
+++ b/thesis-app/src/app/customer/components/stylist-profile/stylist.profile.component.css
@@ -28,6 +28,7 @@
   border-radius: 20px;
   width: 21%;
   margin-right: 6em;
+  border: 1px solid #F9B71A;
 }
 
 .profileContainer {
@@ -170,6 +171,7 @@ textarea {
   margin-right: .5em;
   margin-top: 1em;
   border-radius: 35px;
+  border: 1px solid #F9B71A;
 }
 
 .formContainer2 {
