--- a/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.css
+++ b/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.css
@@ -197,17 +197,20 @@
 }
 
 .btnContainer {
-  flex: 1 1;
+  flex: 1 1 100%;
+  height: 10%;
+  width: 95%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.btnContainer button {
+  border: 1px solid #F9B71A;
   width: 20%;
-  align-self: flex-end;
   background-color: #F9B71A;
   color: white;
   margin-right: 2em;
   margin-top: 1em;
   border-radius: 35px;
-  text-align: center;
-}
-
-.btnContainer > * {
-  border: 1px solid #F9B71A;
+  align-self: flex-end;
 }
