--- a/thesis-app/src/app/customer/components/stylist-profile/stylist.profile.component.css
+++ b/thesis-app/src/app/customer/components/stylist-profile/stylist.profile.component.css
@@ -26,7 +26,8 @@
   background-color: #F9B71A;
   color: #ffffff;
   border-radius: 20px;
-  width: 21%;
+  width: 25%;
+  height: 10%;
   margin-right: 6em;
   border: 1px solid #F9B71A;
 }
@@ -231,5 +232,6 @@ textarea {
   margin-right: .5em;
   margin-top: 1em;
   border-radius: 35px;
+  border: 1px solid #F9B71A;
 }
 
