--- a/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.css
+++ b/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.css
@@ -196,6 +196,16 @@
   width: 95%;
 }
 
+.imageContainer {
+  flex: 1 1 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  color: white;
+  border: none;
+}
+
 .btnContainer {
   flex: 1 1 100%;
   height: 10%;
