--- a/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
+++ b/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
@@ -75,6 +75,13 @@
           </div>
         </div>
 
+        <div class="imageContainer">
+          <div>
+            <h4>Change Image (url)</h4>
+          </div>
+          <input class="modalInput" [(ngModel)]="image_url" name="image_url" />
+        </div>
+
         <div class="modalAboutMe">
           <div>
             <h4>About Me</h4>
@@ -89,6 +96,7 @@
             </div>
           </div>
         </div>
+
 
         <div class="btnContainer">
           <button type="submit">Save</button>
