--- a/thesis-app/src/app/stylist/components/stylist-home/stylist-home.component.html
+++ b/thesis-app/src/app/stylist/components/stylist-home/stylist-home.component.html
@@ -1,4 +1,4 @@
-<customer-navbar></customer-navbar>
+<!-- <customer-navbar></customer-navbar>
 <div class="wrapper">
   <div class="booking-container"
     *ngIf="stylistProfile.confirmedBookings.length === 0 && stylistProfile.pendingBookings.length === 0"
@@ -33,4 +33,4 @@
       [markers]="stylistProfile.markers"
     ></stylist-map>
   </div>
-</div>
+</div> -->
