Fix close to you picture

--- a/thesis-app/src/app/customer/components/close-to-you/close-to-you.component.html
+++ b/thesis-app/src/app/customer/components/close-to-you/close-to-you.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <div class="profileContainer">
     <div class="photoContainer">
-      <img src="image_url"/>
+      <img [src]="stylistInformation.image_url"/>
     </div>
     <div class="infoContainer">
       <h6>{{stylistInformation.name}}</h6>
