--- a/thesis-app/src/app/customer/components/landing/landing.component.html
+++ b/thesis-app/src/app/customer/components/landing/landing.component.html
@@ -16,7 +16,7 @@
       >
         <booking
           [name]="confirmedBooking.name"
-          [id_stylists]="confirmedBooking.id_stylists"
+          [image_url]="confirmedBooking.image_url"
           [time]="confirmedBooking.time"
           [phoneNumber]="confirmedBooking.phonenumber"
           [location]="confirmedBooking.location"
@@ -30,7 +30,7 @@
       <div *ngFor="let dueBooking of profile.dueBookings; let i = index">
         <booking
           [name]="dueBooking.name"
-          [id_stylists]="dueBooking.id_stylists"
+          [image_url]="dueBooking.image_url"
           [time]="dueBooking.time"
           [phoneNumber]="dueBooking.phonenumber"
           [location]="dueBooking.location"
@@ -52,7 +52,7 @@
       >
         <booking
           [name]="pendingBooking.name"
-          [id_stylists]="pendingBooking.id_stylists"
+          [image_url]="pendingBooking.image_url"
           [time]="pendingBooking.time"
           [phoneNumber]="pendingBooking.phonenumber"
           [location]="pendingBooking.location"
@@ -76,7 +76,7 @@
       >
         <booking
           [name]="confirmedBooking.name"
-          [id_stylists]="confirmedBooking.id_stylists"
+          [image_url]="confirmedBooking.image_url"
           [time]="confirmedBooking.time"
           [phoneNumber]="confirmedBooking.phonenumber"
           [location]="confirmedBooking.location"
@@ -94,7 +94,7 @@
       <div *ngFor="let dueBooking of profile.dueBookings; let i = index">
         <booking
           [name]="dueBooking.name"
-          [id_stylists]="dueBooking.id_stylists"
+          [image_url]="dueBooking.image_url"
           [time]="dueBooking.time"
           [phoneNumber]="dueBooking.phonenumber"
           [location]="dueBooking.location"
@@ -114,7 +114,7 @@
       >
         <booking
           [name]="pendingBooking.name"
-          [id_stylists]="pendingBooking.id_stylists"
+          [image_url]="pendingBooking.image_url"
           [time]="pendingBooking.time"
           [phoneNumber]="pendingBooking.phonenumber"
           [location]="pendingBooking.location"
