Add history for bookings

--- a/thesis-app/src/app/customer/components/landing/landing.component.html
+++ b/thesis-app/src/app/customer/components/landing/landing.component.html
@@ -39,6 +39,7 @@
         <payment-input
           (handleProcessedPayment)="payBooking(dueBooking.id, i)"
           [stylistName]="dueBooking.name"
+          [bookingId]="dueBooking.id"
         >
         </payment-input>
       </div>
