--- a/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
+++ b/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
@@ -75,11 +75,9 @@
           </div>
         </div>
 
-        <div class="imageContainer">
-          <div>
-            <h4>Change Image (url)</h4>
-          </div>
-          <input class="modalInput" [(ngModel)]="image_url" name="image_url" />
+        <div class="modalImageContainer">
+          <h4>Change Image (url)</h4>
+          <input [(ngModel)]="image_url" name="image_url" />
         </div>
 
         <div class="modalAboutMe">
