Adjust customer profile component

--- a/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
+++ b/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
@@ -18,8 +18,8 @@
 
       <div class="userInfo">
         <h5><span class="glyphicon glyphicon-home"></span> {{ profile.billingaddress }}</h5>
-        <h5 *ngIf="profile.type===0"><span class="glyphicon glyphicon-globe"></span> Personal Website: {{profile.site_url}}</h5>
-        <h5 *ngIf="profile.type===0"><span class="glyphicon glyphicon-inbox"></span> Personal Website: {{profile.email}}</h5>
+        <h5 *ngIf="profile.type===0"><span class="glyphicon glyphicon-globe"></span> {{profile.site_url}}</h5>
+        <h5 *ngIf="profile.type===0"><span class="glyphicon glyphicon-inbox"></span> {{profile.email}}</h5>
         <h5><span class="glyphicon glyphicon-earphone"></span> {{ profile.phonenumber }}</h5>
       </div>
     </div>
