Replace lorem ipsum

--- a/thesis-app/src/app/registration/components/signin-form/signin-form.component.html
+++ b/thesis-app/src/app/registration/components/signin-form/signin-form.component.html
@@ -2,7 +2,8 @@
   <registration-header class="header" headerText="Login Page"></registration-header>
   <div class="loginWrapper">
     <div class="flexItem">
-      <p >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+      <p>At It's Cut Time, we aim to offer a clean and intuitive communication platform for hairstylists and consumers. If you are looking for haircare at your doorstep, we are excited to introduce tools that you can use for free! After matching with a stylist, you can reachout to them via our integrated messaging service and set-up an appointment with them. If you are a stylist, we offer you the tools to manage your appointments efficiently. Chat with customers easily using our massaging system to ensure their experience is always improved upon. Payments are processed through Stripe for hassle-free direct deposits.
+       </p>
     </div>
     <div class="flexItem loginButtons">
       <form (ngSubmit)="handleLogin(f)" #f="ngForm">
