Add auto adjusting src tag

--- a/thesis-app/src/app/customer/components/booking/booking.component.html
+++ b/thesis-app/src/app/customer/components/booking/booking.component.html
@@ -9,7 +9,7 @@
 <div class="wrapper">
   <div class="profileContainer">
     <div class="photoContainer">
-      <img src="image_url"/>
+      <img [src]="image_url"/>
     </div>
     <div class="infoContainer">
       <h6>{{name}}</h6>
