--- a/thesis-app/src/app/customer/components/booking/booking.component.html
+++ b/thesis-app/src/app/customer/components/booking/booking.component.html
@@ -14,5 +14,6 @@
     <h6>{{name}}</h6>
     <h6 class="glyphicon glyphicon-time">{{time}}</h6>
     <h6 class="glyphicon glyphicon-earphone">{{phoneNumber}}</h6>
+    <h6 class="glyphicon glyphicon-envelope">{{location}}</h6>
   </div>
 </div>
