--- a/thesis-app/src/app/customer/components/close-to-you/close-to-you.component.css
+++ b/thesis-app/src/app/customer/components/close-to-you/close-to-you.component.css
@@ -20,10 +20,15 @@
 
 .photoContainer {
   height: 100%;
-  width: 20%;
+  width: 40%;
   border: 1px solid;
   display: flex;
   justify-content: flex-start;
+}
+
+.photoContainer img {
+  width: 100%;
+  height: 100%;
 }
 
 .infoContainer {
