Add styling to the profile image

--- a/thesis-app/src/app/customer/components/booking/booking.component.html
+++ b/thesis-app/src/app/customer/components/booking/booking.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <div class="profileContainer">
     <div class="photoContainer">
-      <img [src]="image_url"/>
+      <img class="profileImage" [src]="image_url"/>
     </div>
   </div>
   <div class="infoContainer">
