Add error message on login

--- a/thesis-app/src/app/registration/components/signin-form/signin-form.component.html
+++ b/thesis-app/src/app/registration/components/signin-form/signin-form.component.html
@@ -21,6 +21,7 @@
             ngModel
             name="password">
         <br>
+        <h6 *ngIf="!!isError">Please try again</h6>
         <div class="btnContainer">
           <button
             type="submit"
