Fix phone number in close to you

--- a/thesis-app/src/app/customer/components/close-to-you/close-to-you.component.html
+++ b/thesis-app/src/app/customer/components/close-to-you/close-to-you.component.html
@@ -4,8 +4,8 @@
       <img [src]="stylistInformation.image_url"/>
     </div>
     <div class="infoContainer">
-      <h6>{{stylistInformation.name}}</h6>
-      <h6>Contact: {{stylistInformation.phoneNumber}}</h6>
+      <h5>{{stylistInformation.name}}</h5>
+      <h6>Contact: {{stylistInformation.phonenumber}}</h6>
       <h6>Email: {{stylistInformation.email}}</h6>
     </div>
   </div>
