--- a/thesis-app/src/app/customer/components/booking/booking.component.css
+++ b/thesis-app/src/app/customer/components/booking/booking.component.css
@@ -1,56 +1,86 @@
+.wrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  /*border: 2px solid red;*/
+  font-family: 'Montserrat', sans-serif;
+  border-bottom: 1px solid grey;
+}
+
 .profileContainer {
   display: flex;
+  flex-direction: column;
   height: 100%;
-  width: 100%;
-  font-family: 'Montserrat', sans-serif;
-  margin-bottom: 2em;
-  padding-bottom: 1em;
-  border: 2px solid red;
-  border-bottom: 1px solid;
+  width: 8%;
+  /*margin-bottom: 2em;*/
+  /*padding-bottom: 1em;*/
+  /*border: 2px solid red;*/
+  /*border-bottom: 1px solid;*/
+  flex: 1 1 8%;
+  margin-bottom: 1em;
 }
 
 .photoContainer {
-  border: 2px solid red;
+  /*border: 2px solid red;*/
   display: flex;
   flex-direction: column;
-  align-items: center;
-  color: #F9B71A;
-  border-bottom: 1px solid black;
-  flex: 1 1 50%;
-  height: 50%;
-  width: 95%;
-  margin-bottom: 1em;
-  margin-left: 1em;
+  justify-content: center;
+  /*align-items: center;*/
+  /*color: #F9B71A;*/
+  /*border-bottom: 1px solid black;*/
+  /*border: 2px solid red;*/
+  flex: 1 1 100%;
+  height: 100%;
+  width: 100%;
+  /*width: 95%;*/
+  /*margin-left: 1em;*/
 }
 
 .profileImage {
-  margin-top: 2em;
-  width: 70%;
-  height: 65%;
+  /*margin-top: 2em;*/
+  width: 100%;
+  height: 100%;
+  align-self: center;
 }
 
 .infoContainer {
   display: flex;
   flex-direction: column;
   height: 100%;
-  width: 89%;
+  width: 65%;
   margin-left: 1em;
+  flex: 1 1 50%;
+  margin-bottom: 1em;
 }
 
 .buttonContainer {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
+  flex: 1 1 30%;
+  padding-top: 1em;
+  /*border: 2px solid red;*/
+  /*margin-bottom: 1em;*/
 }
 
 .buttonContainer > * {
   background-color: #F9B71A;
   color: #ffffff;
-  height: 50%;
-  width: 25%;
-  align-self: flex-end;
-  margin-bottom: 1em;
-  margin-left: 1em;
+  height: 20%;
+  width: 47%;
+  /*align-self: flex-end;*/
+  /*margin-bottom: 1em;*/
+  /*margin-left: 1em;*/
+  margin: 1em;
   border-radius: 23px;
   border: 1px solid #F9B71A;
+}
+
+.paymentInput {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1 1 30%;
+  padding-top: 1em;
+  /*border: 2px solid red;*/
 }
