--- a/thesis-app/src/app/customer/components/landing/landing.component.html
+++ b/thesis-app/src/app/customer/components/landing/landing.component.html
@@ -14,12 +14,16 @@
         *ngFor="let confirmedBooking of profile.confirmedBookings; let i = index"
         class="booking-confirmed"
       >
-        <booking
+        <booking class="booking"
           [name]="confirmedBooking.name"
           [image_url]="confirmedBooking.image_url"
           [time]="confirmedBooking.time"
           [phoneNumber]="confirmedBooking.phonenumber"
           [location]="confirmedBooking.location"
+          [isCancel]="true"
+          [isConfirmed]="true"
+          (handleCancel)="cancelBooking(confirmedBooking.id, i)"
+          (handleComplete)="completeBooking(confirmedBooking.id, i)"
         >
         </booking>
       </div>
@@ -34,14 +38,12 @@
           [time]="dueBooking.time"
           [phoneNumber]="dueBooking.phonenumber"
           [location]="dueBooking.location"
-        >
-        </booking>
-        <payment-input
-          (handleProcessedPayment)="payBooking(dueBooking.id, i)"
+          [isPay]="true"
           [stylistName]="dueBooking.name"
           [bookingId]="dueBooking.id"
+          (handlePay)="payBooking(dueBooking.id, i)"
         >
-        </payment-input>
+        </booking>
       </div>
     </div>
 
@@ -57,11 +59,10 @@
           [time]="pendingBooking.time"
           [phoneNumber]="pendingBooking.phonenumber"
           [location]="pendingBooking.location"
+          (handleCancel)="declineBooking(pendingBooking.id, i)"
+          [isCancel]="true"
         >
         </booking>
-        <div class="buttonContainer">
-          <button (click)="declineBooking(pendingBooking.id, i)">Decline</button>
-        </div>
       </div>
     </div>
 
@@ -77,11 +78,10 @@
           [time]="historyBooking.time"
           [phoneNumber]="historyBooking.phonenumber"
           [location]="historyBooking.location"
+          (handleClearHistory)="clearHistory(historyBooking.id, i)"
+          [isHistory]="true"
         >
         </booking>
-        <div class="buttonContainer">
-          <button (click)="clearHistory(historyBooking.id, i)">Clear</button>
-        </div>
       </div>
     </div>
   </div>
@@ -101,12 +101,12 @@
           [time]="confirmedBooking.time"
           [phoneNumber]="confirmedBooking.phonenumber"
           [location]="confirmedBooking.location"
+          (handleCancel)="cancelBooking(confirmedBooking.id, i)"
+          (handleComplete)="completeBooking(confirmedBooking.id, i)"
+          [isReady]="true"
+          [isCancel]="true"
         >
         </booking>
-        <div class="buttonContainer">
-          <button (click)="cancelBooking(confirmedBooking.id, i)">Cancel</button>
-          <button (click)="completeBooking(confirmedBooking.id, i)">Get paid!</button>
-        </div>
       </div>
     </div>
 
@@ -119,11 +119,10 @@
           [time]="dueBooking.time"
           [phoneNumber]="dueBooking.phonenumber"
           [location]="dueBooking.location"
+          (handleCancelComplete)="cancelPayment(dueBooking.id, i)"
+          [isCancelComplete]="true"
         >
         </booking>
-        <div class="buttonContainer">
-          <button (click)="cancelPayment(dueBooking.id, i)">Cancel</button>
-        </div>
       </div>
     </div>
 
@@ -139,12 +138,12 @@
           [time]="pendingBooking.time"
           [phoneNumber]="pendingBooking.phonenumber"
           [location]="pendingBooking.location"
+          (handleDecline)="declineBooking(pendingBooking.id, i)"
+          (handleAccept)="acceptBooking(pendingBooking.id, i)"
+          [isConfirmed]="true"
+          [isAccept]="true"
         >
         </booking>
-        <div class="buttonContainer">
-          <button (click)="acceptBooking(pendingBooking.id, i)">Accept</button>
-          <button (click)="declineBooking(pendingBooking.id, i)">Decline</button>
-        </div>
       </div>
     </div>
 
@@ -160,11 +159,10 @@
           [time]="historyBooking.time"
           [phoneNumber]="historyBooking.phonenumber"
           [location]="historyBooking.location"
+          (handleClearHistory)="clearHistory(historyBooking.id, i)"
+          [isHistory]="true"
         >
         </booking>
-        <div class="buttonContainer">
-          <button (click)="clearHistory(historyBooking.id, i)">Clear</button>
-        </div>
       </div>
     </div>
 </div>
