--- a/thesis-app/src/app/ui/payment/components/payment-input/payment-input.component.css
+++ b/thesis-app/src/app/ui/payment/components/payment-input/payment-input.component.css
@@ -1,11 +1,26 @@
-/*div {
-  height: 3rem;
-  border-radius: 5px;
-  background-color: #77A0A9;
-  text-align: center;
-  width: 6rem;
-  height: 2rem;
+.buttonContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1 1 100%;
+  height: 9em;
+  width: 23em;
+  margin: 0em;
+  padding: 0em;
+  /*padding-top: 1em;*/
+  /*margin-bottom: 1em;*/
+  /*border: 2px solid red;*/
 }
-span {
-  color: #F4F1BB;
-}*/
+
+.buttonContainer > * {
+  background-color: #F9B71A;
+  color: #ffffff;
+  height: 20%;
+  width: 47%;
+  /*align-self: flex-end;*/
+  /*margin-bottom: 1em;*/
+  /*margin-left: 1em;*/
+  margin: 1em;
+  border-radius: 23px;
+  border: 1px solid #F9B71A;
+}
