Comment out place holder text

--- a/thesis-app/src/app/customer/components/landing/landing.component.html
+++ b/thesis-app/src/app/customer/components/landing/landing.component.html
@@ -10,9 +10,9 @@
 
     <div class="confirmedContainer">
       <h4>Confirmed</h4>
-      <div *ngIf="profile.confirmedBookings.length === 0 || !profile.confirmedBookings">
+<!--       <div *ngIf="profile.confirmedBookings.length === 0 || !profile.confirmedBookings">
         <p>You don't have any confirmed booking.</p>
-      </div>
+      </div> -->
       <div
         *ngFor="let confirmedBooking of profile.confirmedBookings; let i = index"
         class="booking-confirmed"
@@ -34,9 +34,9 @@
 
     <div class="awaitingContainer">
       <h4>Awaiting Payment</h4>
-      <div *ngIf="profile.dueBookings.length === 0 || !profile.dueBookings">
+<!--       <div *ngIf="profile.dueBookings.length === 0 || !profile.dueBookings">
         <p>You don't have any booking awaiting payment.</p>
-      </div>
+      </div> -->
       <div *ngFor="let dueBooking of profile.dueBookings; let i = index">
         <booking
           [name]="dueBooking.name"
@@ -55,9 +55,9 @@
 
     <div class="pendingContainer">
       <h4>Pending</h4>
-        <div *ngIf="profile.pendingBookings.length === 0 || !profile.pendingBookings">
+<!--         <div *ngIf="profile.pendingBookings.length === 0 || !profile.pendingBookings">
           <p>You don't have any pending booking.</p>
-        </div>
+        </div> -->
       <div
         *ngFor="let pendingBooking of profile.pendingBookings; let i = index"
         class="booking-confirmed"
@@ -99,9 +99,9 @@
   <div *ngIf="profile.type===0">
     <div class="confirmedContainer">
       <h4>Confirmed</h4>
-        <div *ngIf="profile.confirmedBookings.length === 0 || !profile.confirmedBookings">
+<!--         <div *ngIf="profile.confirmedBookings.length === 0 || !profile.confirmedBookings">
           <p>You don't have any confirmed booking.</p>
-        </div>
+        </div> -->
       <div
         *ngFor="let confirmedBooking of profile.confirmedBookings; let i = index"
         class="booking-confirmed"
@@ -123,9 +123,9 @@
 
     <div class="awaitingContainer">
       <h4>Awaiting Payment</h4>
-        <div *ngIf="profile.dueBookings.length === 0 || !profile.dueBookings">
+<!--         <div *ngIf="profile.dueBookings.length === 0 || !profile.dueBookings">
           <p>You don't have any booking awaiting payment.</p>
-        </div>
+        </div> -->
       <div *ngFor="let dueBooking of profile.dueBookings; let i = index">
         <booking
           [name]="dueBooking.name"
@@ -142,9 +142,9 @@
 
     <div class="pendingContainer">
       <h4>Pending</h4>
-        <div *ngIf="profile.pendingBookings.length === 0 || !profile.pendingBookings">
+<!--         <div *ngIf="profile.pendingBookings.length === 0 || !profile.pendingBookings">
           <p>You don't have any pending booking.</p>
-        </div>
+        </div> -->
       <div
         *ngFor="let pendingBooking of profile.pendingBookings; let i = index"
         class="booking-confirmed"
