--- a/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.css
+++ b/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.css
@@ -1,8 +1,10 @@
 .componentWrapper {
   display: flex;
   flex-direction: column;
+  background-color: black;
   background-image: url('http://cdn.wallpapersafari.com/44/5/HQjIBU.jpg');
   height: 100vh;
+  background-repeat: no-repeat;
   color: white;
   font-family: 'Montserrat', sans-serif;
 }
