--- a/thesis-app/src/app/customer/components/booking/booking.component.css
+++ b/thesis-app/src/app/customer/components/booking/booking.component.css
@@ -4,7 +4,7 @@
   display: flex;
   /*border: 2px solid red;*/
   font-family: 'Montserrat', sans-serif;
-  border-bottom: 1px solid grey;
+  border-bottom: 1px solid #b2b2b2;
 }
 
 .profileContainer {
