--- a/thesis-app/src/app/customer/components/close-to-you/close-to-you.component.css
+++ b/thesis-app/src/app/customer/components/close-to-you/close-to-you.component.css
@@ -21,7 +21,7 @@
 .photoContainer {
   height: 100%;
   width: 40%;
-  border: 1px solid;
+  border: 1px solid #b2b2b2;
   display: flex;
   justify-content: flex-start;
 }
