--- a/thesis-app/src/app/customer/components/customer-message/customer-message.component.css
+++ b/thesis-app/src/app/customer/components/customer-message/customer-message.component.css
@@ -15,7 +15,7 @@ h2 {
 }
 
 .inboxContainer {
-  border-right: 1px solid black;
+  border-right: 1px solid #b2b2b2;
   flex: 1 1 30%;
   height: 100%;
 }
@@ -31,7 +31,7 @@ h2 {
   display: flex;
   justify-content: center;
   border-bottom: black;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #b2b2b2;
   height: 15%;
 }
 
