--- a/thesis-app/src/app/customer/components/stylist-profile/stylist.profile.component.css
+++ b/thesis-app/src/app/customer/components/stylist-profile/stylist.profile.component.css
@@ -46,7 +46,7 @@
   flex: 1 1 30%;
   display: flex;
   flex-direction: column;
-  border-right: 1px solid black;
+  border-right: 1px solid #b2b2b2;
 }
 
 .imageContainer {
@@ -54,7 +54,7 @@
   flex-direction: column;
   align-items: center;
   color: #F9B71A;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #b2b2b2;
   flex: 1 1 50%;
   height: 50%;
   width: 95%;
