Add chat name as recipient

--- a/thesis-app/src/app/customer/components/customer-message/customer-message.component.html
+++ b/thesis-app/src/app/customer/components/customer-message/customer-message.component.html
@@ -11,7 +11,7 @@
     </div>
     <div class="messageHist">
       <div class="username">
-        <h2>hello</h2>
+        <h2>{{currentChatName}}</h2>
       </div>
       <div class="chatHistoryContainer">
         <chat-history
